[package]
name = "state_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_codegen = "0.5.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
sqlx = { version = "0.6", features = [
    "mysql",
    "runtime-tokio-native-tls"
] }

